fixed overflow on my mobile response

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -232,6 +232,6 @@ on each other instead of next to each other */
   }
 
   .box {
-    padding: 1px;
+    padding: 0.9px;
   }
 }
